# Training-Batch-Selection

./: .gitignore  BERT_Training_Colab.ipynb  CONFIG_README.md  HAAG_BS_DatasetExplorer.ipynb  README.md  TEAM_PROJECT_REPORT.md  batch_selection_main.ipynb  check_devices.py  convert_mnist_to_csv.py  demo_benchmark_datasets.sbatch  pyproject.toml  requirements.txt  run_pretraining.py  setup.py
config/: __init__.py  base.py  batch_strategies.py  dataset_config_enhanced.yaml  datasets.py  models.py  nlp.py  vision.py
data/: README.md
docs/: CINIC10_SETUP.md  CINIC10_SUMMARY.md  COMMAND_REFERENCE.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  RESTRUCTURING_STATUS.md  coding-standards.md  getting-started.md  github-workflow.md
docs/archive/: README_NEW.md  README_OLD.md
legacy/trainer/: constants.py
legacy/trainer/dataloader/: factory.py
legacy/trainer/factories/: model_factory.py  (+1 more)
scripts/: check_device.py  download_datasets.py  download_engines.py  setup_cinic10.py
tasks/nlp/: run_pretraining.py
tasks/vision/: benchmark.py  compare.py  evaluate.py  run_all.py  run_experiment.py  train.py
trainer/: constants.py  constants_batch_strategy.py  constants_datasets.py  constants_models.py  constants_nlp.py
trainer/data/: loader.py
trainer/dataloader/: Datasets.md  README.md  auto_convert_csv.py  builders.py  factory.py  nlp_dataloader.py  text_dataloader.py  vision_dataloader.py
trainer/factories/: __init__.py  optimizer_factory.py
trainer/model/: README.md
trainer/pipelines/: README.md  pretrain.py  train_helper_legacy.py
trainer/utils/: count_tokens.py
(+104 files in other folders)
